force-app/main/default/objects/ProdType_Group3__c/ProdType_Group3__c.object-meta.xml
<CustomObject>
    <label>ProdType Group3</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProdType Group3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>