force-app/main/default/objects/ProdType_Group3__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ProdType Group3</relationshipLabel>
    <relationshipName>ProdType_Group3</relationshipName>
    <type>Lookup</type>
</CustomField>