force-app/main/default/objects/ProdType_Group3__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type</label>
    <referenceTo>ProductType__c</referenceTo>
    <relationshipLabel>ProdType Group3</relationshipLabel>
    <relationshipName>ProdType_Group3</relationshipName>
    <type>Lookup</type>
</CustomField>