force-app/main/default/objects/ProdType_Group3__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ProductCode__c</columns>
    <columns>Group3__c</columns>
    <columns>Product2Id__c</columns>
    <columns>ProductType__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>